# GameOfLife

./: README.md
MPI/: CMakeLists.txt  Commander.h  Computer.h  ContigousArray.h  main.cpp
Threads/: CMakeLists.txt  main.cpp
sample_fields/: lwss.csv
